# python_packaging_flit_wise

./: CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
podsearch/: http.py
python_packaging_flit_wise/: __init__.py  searcher.py
tests/: test_get.py  test_http.py  test_search.py
