[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "python_packaging_flit_wise"
author = "wisemuffin"
author-email = "davidgg777@hotmail.com"
home-page = "https://github.com/wisemuffin/python_packaging_flit_wise-py"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python = ">=3.7"
